--- a/Data/READMEs/RM_ClassTree.tex
+++ b/Data/READMEs/RM_ClassTree.tex
@@ -33,6 +33,7 @@
             urlcolor=blue,
             breaklinks=true}
 \urlstyle{same}  % don't use monospace font for urls
+\usepackage{longtable,booktabs}
 \usepackage{graphicx,grffile}
 \makeatletter
 \def\maxwidth{\ifdim\Gin@nat@width>\linewidth\linewidth\else\Gin@nat@width\fi}
@@ -93,8 +94,8 @@
 \maketitle
 \begin{abstract}
 This Chapter is describes the classification tree algorithm applied to
-the CleanClass2007to2014\_2 data coded in the script
-`ClassificationTree.R'.
+the different data sets (all with '\_3', one unsampled and four
+sampled), coded in the script `ClassificationTree.R'.
 \end{abstract}
 
 \hypertarget{fundamentals-of-classification-trees}{%
@@ -103,7 +104,7 @@ Trees}\label{fundamentals-of-classification-trees}}
 
 Classification trees split the different variables in order to obtain
 the most homogeneos possible clusters, by minimizing a loss function,
-that can be restricted (this complexity parameter is called cp in the
+that can be restricted (this complexity parameter is called `cp' in the
 rpart-Package). For every split it computes the sum of the errors on
 both sides of the split for all Variables and chooses the one with the
 lowest error.
@@ -126,16 +127,132 @@ for optimizing the model with respect to the best complexity and the
 spots to split. Therefore we do no further cross-validation on the data
 set.
 
-Here you can see the different trees, that we grew, plotted with the
-fancyRpartPlot-function out of the rattle-Package. Since we use data
-with many variables and a couple of splits are made, the plots are not
-really readable. The aim of showing them, is to visualize the complexity
-of the trees.
+You can see the different trees, that we grew, plotted with the
+fancyRpartPlot-function out of the rattle-Package in the Appendix at the
+end of this file. We are cross-validating the sampling methods and
+therefore grow 20 trees in total, we will still just display the four
+trees from the unsampled dataframe. Since we use data with many
+variables and a couple of splits are made, the plots are not really
+readable. The aim of showing them, is to visualize the complexity of the
+trees.
+
+\hypertarget{performance-measurement-of-the-trees}{%
+\subsection{Performance Measurement of the
+trees}\label{performance-measurement-of-the-trees}}
+
+We now want to have a look on the performance of the trees. In order to
+compare the results to other models performance, we decided to always
+take unsampled data for this. And since our business case is to predict
+the 2014 draft (as if it was the day before), we apply it on the data
+from 2007 to 2013 to compare the classification errors.
+
+\begin{longtable}[]{@{}lrrrrr@{}}
+\caption{True Positives/Negatives and False Positives/Negatives of the
+trees for the different models}\tabularnewline
+\toprule
+& No Sampling & Oversampling & Undersampling & Rose Both &
+Smote\tabularnewline
+\midrule
+\endfirsthead
+\toprule
+& No Sampling & Oversampling & Undersampling & Rose Both &
+Smote\tabularnewline
+\midrule
+\endhead
+QB\_TP & 46 & 68 & 70 & 65 & 65\tabularnewline
+QB\_TN & 327 & 292 & 221 & 276 & 281\tabularnewline
+QB\_FP & 10 & 45 & 116 & 61 & 56\tabularnewline
+QB\_FN & 27 & 5 & 3 & 8 & 8\tabularnewline
+WR\_TP & 79 & 146 & 152 & 149 & 138\tabularnewline
+WR\_TN & 1118 & 948 & 921 & 889 & 910\tabularnewline
+WR\_FP & 18 & 188 & 215 & 247 & 226\tabularnewline
+WR\_FN & 85 & 18 & 12 & 15 & 26\tabularnewline
+RB\_TP & 48 & 80 & 74 & 81 & 81\tabularnewline
+RB\_TN & 527 & 462 & 437 & 425 & 412\tabularnewline
+RB\_FP & 11 & 76 & 101 & 113 & 126\tabularnewline
+RB\_FN & 42 & 10 & 16 & 9 & 9\tabularnewline
+Together\_TP & 116 & 291 & 290 & 289 & 271\tabularnewline
+Together\_TN & 1974 & 1563 & 1566 & 1522 & 1599\tabularnewline
+Together\_FP & 37 & 448 & 445 & 489 & 412\tabularnewline
+Together\_FN & 211 & 36 & 37 & 38 & 56\tabularnewline
+\bottomrule
+\end{longtable}
+
+In order to compare them better, we will now have a look at the ratio of
+correct classification, which is equal to:
+
+\begin{center}
+$\frac{Correct Classifications}{All Classifications} = \frac{TP + TN}{TP+TP+FP+FN}$
+\end{center}
+
+\begin{longtable}[]{@{}lrrrr@{}}
+\caption{Percentage of right classifications}\tabularnewline
+\toprule
+Sampling & QB & WR & RB & Together\tabularnewline
+\midrule
+\endfirsthead
+\toprule
+Sampling & QB & WR & RB & Together\tabularnewline
+\midrule
+\endhead
+no\_sampling & 0.9098 & 0.9208 & 0.9156 & 0.8939\tabularnewline
+oversampling & 0.8780 & 0.8415 & 0.8631 & 0.7930\tabularnewline
+undersampling & 0.7098 & 0.8254 & 0.8137 & 0.7938\tabularnewline
+Rose\_both & 0.8317 & 0.7985 & 0.8057 & 0.7746\tabularnewline
+Smote & 0.8439 & 0.8062 & 0.7850 & 0.7998\tabularnewline
+\bottomrule
+\end{longtable}
+
+\hypertarget{conclusion}{%
+\subsection{Conclusion}\label{conclusion}}
+
+As we see, the models for the manually separated positions mostly
+perform better than the model for QB/WR/RB together. But the bigger
+effect, which we can see, is that the sampling reduces the accuracy of
+the models quite much. Since we have 12.4\% of drafted players in the
+data, a model predicting 0 (=not drafted) would outperform the models
+trained on sampled data.
+
+Within the Classification tree models, the highest accuracy could be
+obtained, by using the three models for the manually separated positions
+with a weighted average accuracy of 91.74\%. Keeping in mind, that a
+model that always predicts `0' would also have an accuracy of 87.6\%,
+this models performance, which looks very good on the first sight, is
+only a quite small improvement.
+
+\hypertarget{appendix}{%
+\subsection{Appendix}\label{appendix}}
 
 \begin{figure}
+\hypertarget{id}{%
 \centering
-\includegraphics{../../Project_Scripts/Togtree.jpg}
-\caption{Classification Tree for the whole data}
+\includegraphics[width=0.5\textwidth,height=\textheight]{../../Project_Scripts/TogethertreeNS.jpg}
+\caption{Tree for QB/WR/RB together on unsampled data}\label{id}
+}
+\end{figure}
+
+\begin{figure}
+\hypertarget{id}{%
+\centering
+\includegraphics[width=0.5\textwidth,height=\textheight]{../../Project_Scripts/QBtreeNS.jpg}
+\caption{Tree for QB's on unsampled data}\label{id}
+}
+\end{figure}
+
+\begin{figure}
+\hypertarget{id}{%
+\centering
+\includegraphics[width=0.5\textwidth,height=\textheight]{../../Project_Scripts/WRtreeNS.jpg}
+\caption{Tree for WR's on unsampled data}\label{id}
+}
+\end{figure}
+
+\begin{figure}
+\hypertarget{id}{%
+\centering
+\includegraphics[width=0.5\textwidth,height=\textheight]{../../Project_Scripts/RBtreeNS.jpg}
+\caption{Tree for RB's on unsampled data}\label{id}
+}
 \end{figure}
 
 
