--- a/Data/READMEs/RM_PerformanceMeasurement.tex
+++ b/Data/READMEs/RM_PerformanceMeasurement.tex
@@ -132,9 +132,7 @@ case.
 Then we calculate the ratio of correct classification, which is equal
 to:
 
-\begin{center}
-$\frac{Correct Classifications}{All Classifications} = \frac{TP + TN}{TP+TP+FP+FN}$
-\end{center}
+\[\frac{\text{Correct Classifications}}{\text{All Classifications}} = \frac{TP + TN}{TP+TP+FP+FN}\]
 
 The result is a table showing the percentage of correct classification
 for all the 140 model/sampling/position combination. This table is quite
@@ -175,15 +173,15 @@ NaiveBayes & undersampling & 0.6878 & 0.7946 & 0.8328 &
 NaiveBayes & Rose\_both & 0.7341 & 0.7231 & 0.8615 &
 0.7930\tabularnewline
 NaiveBayes & Smote & 0.7317 & 0.8077 & 0.7213 & 0.8798\tabularnewline
-randomForest & no\_sampling & 0.6829 & 0.7838 & 0.7452 &
-0.7626\tabularnewline
-randomForest & oversampling & 0.5192 & 0.5146 & 0.5009 &
-0.4980\tabularnewline
-randomForest & undersampling & 0.5254 & 0.4665 & 0.4607 &
-0.4786\tabularnewline
-randomForest & Rose\_both & 0.5077 & 0.5139 & 0.4750 &
-0.4970\tabularnewline
-randomForest & Smote & 0.5389 & 0.5161 & 0.5136 & 0.5058\tabularnewline
+randomForest & no\_sampling & 1.0000 & 0.9977 & 1.0000 &
+0.9979\tabularnewline
+randomForest & oversampling & 1.0000 & 0.9985 & 1.0000 &
+0.9996\tabularnewline
+randomForest & undersampling & 0.7415 & 0.8838 & 0.8344 &
+0.8499\tabularnewline
+randomForest & Rose\_both & 0.9073 & 0.9462 & 0.9395 &
+0.9371\tabularnewline
+randomForest & Smote & 1.0000 & 0.9962 & 1.0000 & 0.9983\tabularnewline
 ANN & no\_sampling & 0.8488 & 0.9054 & 0.8838 & 0.8828\tabularnewline
 ANN & oversampling & 0.8593 & 0.8664 & 0.8574 & 0.8531\tabularnewline
 ANN & undersampling & 0.8559 & 0.8771 & 0.8708 & 0.8440\tabularnewline
@@ -200,6 +198,87 @@ LogisticRegression & Rose\_both & 0.7879 & 0.8606 & 0.8248 &
 LogisticRegression & Smote & NA & NA & NA & NA\tabularnewline
 \bottomrule
 \end{longtable}
+
+We can see these two tendencies in the models:
+
+\begin{itemize}
+\tightlist
+\item
+  Better performance with unsampled data, than with sampled data
+\item
+  Better performance when we split the positions manually
+\end{itemize}
+
+\hypertarget{our-best-models}{%
+\subsection{Our best models}\label{our-best-models}}
+
+With regards to the business case, we now need to decide which
+model/models we will use to predict the 2014 NFL Draft. Here you can see
+the best model/sampling combination for all positions.
+
+\begin{longtable}[]{@{}lllr@{}}
+\caption{The best model/sampling combinations by
+position}\tabularnewline
+\toprule
+Position & Method & Sampling & Accuracy\tabularnewline
+\midrule
+\endfirsthead
+\toprule
+Position & Method & Sampling & Accuracy\tabularnewline
+\midrule
+\endhead
+QB & randomForest & no\_sampling & 1.0000\tabularnewline
+WR & randomForest & oversampling & 0.9985\tabularnewline
+RB & randomForest & no\_sampling & 1.0000\tabularnewline
+Together & randomForest & oversampling & 0.9996\tabularnewline
+\bottomrule
+\end{longtable}
+
+\hypertarget{discussion}{%
+\subsection{Discussion}\label{discussion}}
+
+The great and sometimes perfect results of the random forest model show
+a high risk of a massive overfit. The other models with accuracies
+between 89\% and 93\% seem to be very good at the first sight. But we
+have to keep the reason for filtering out the players with \textless10
+played games and sampling the data in mind. Here we applied the models
+to the unsampled but filtered data, which only contains 12.4\% of
+drafted players. This means, that a model predicting ``not drafted'' for
+every player would not perform much worse, since it would still have an
+accuracy of 87.6\%.
+
+Interpretations of models are always quite difficult, but the following
+thoughts are pretty likely to be true, according to the TP/TN/FP/FN. Our
+models are pretty good at predicting the likelihood of players being
+drafted that didn't perform very well in college football being low. It
+probably also does not too bad in predicting great players to be
+drafted, that nearly must be picked (and probably are picked early in
+the draft). But there is probably much room for improvement for all the
+players that still performed well in college, and might or might not be
+drafted.
+
+We would like to close the circle to one of our fist lessons in machine
+learning, in which we were taught the following very high level formula
+for models (the right part). Y denotes the true outcome (in our case
+whether a player is drafted or not), f(X) is the true pattern that
+describes it, and \(\epsilon\) is the noise, which appears to be random.
+With our models (the left part) we try to predict a \(\hat{Y}\), which
+shall be as close as possible to the true Y.
+
+\[\hat{f}(X) = \hat{Y} \approx Y = f(X) + \epsilon\] Looking at this
+inequation we can think of three possibilities, why our models make so
+many mistakes:
+
+\begin{itemize}
+\tightlist
+\item
+  Our models \(\hat{f_i}(X)\) do not include enough variables and/or are
+  not sophisticated enough
+\item
+  The data is not good enough
+\item
+  The NFL draft contains a pretty large \(\epsilon\)
+\end{itemize}
 
 
 \end{document}
